syntax = "proto3";

import "google/api/annotations.proto";

import "v1/page.proto";

option go_package = "aresdata/api/v1;v1";


// ProductService 提供商品维度数据的查询服务
service ProductService {
	// 分页查询商品信息
	rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
			post: "/v1/products/list",
      body: "*"
    };
	}
	 // 查询单个商品信息
	rpc GetProduct(ProductQueryRequest) returns (ProductQueryResponse) {
		option (google.api.http) = {
			post: "/v1/products/detail",
			body: "*"
		};
	}
}

// 商品维度数据 DTO
message ProductDTO {
	// 商品 ID
	string goods_id = 1;
	// 创建时间
	string created_at = 2;
	// 更新时间
	string updated_at = 3;
	// 商品标题
	string goods_title = 4;
	// 商品封面 URL
	string goods_cover_url = 5;
	// 商品价格范围
	string goods_price_range = 6;
	// 商品价格
	double goods_price = 7;
	// 成本占比
	string cos_ratio = 8;
	// 佣金价格
	string commission_price = 9;
	// 店铺名称
	string shop_name = 10;
	// 品牌名称
	string brand_name = 11;
	// 商品类目名称
	string category_names = 12;
}

// 分页查询商品请求
message ListProductsRequest {
	// 分页参数
	PageRequest page = 1;
	// 模糊查询关键字 (将作用于 goods_title 字段)
	string query = 2;
	// 排序字段 (例如: "created_at", "goods_price")
	string sort_by = 3;
	// 排序方向（1: ASC, 2: DESC）
	SortOrder sort_order = 4;
}

// 分页查询商品响应
message ListProductsResponse {
	PageResponse page = 1;
	repeated ProductDTO products = 2;
}

// 查询单个商品请求
message ProductQueryRequest {
	// 商品 ID
	string goods_id = 1;
}

// 查询单个商品响应
message ProductQueryResponse {
	ProductDTO product = 1;
}

